# CodeElephantAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_desktop_exe.cmd  build_desktop_exe.ps1  build_installer_exe.cmd  build_installer_exe.ps1  docker-compose.yml  install_desktop.cmd  install_desktop_ui.ps1  launch_all.cmd  pyproject.toml  run_aim.cmd  run_cli.cmd  run_desktop.cmd  run_docker.ps1  run_installer_exe.cmd  run_local.ps1  run_release.cmd  run_tui.cmd
assets/branding/: README.txt
assets/sounds/: README.txt
data/: memory.db
data/chroma/: chroma.sqlite3
data/docs/: python_basics.md
tutor_agent/: __init__.py  bootstrap.py  config.py  desktop_app.py  desktop_entry.py  llm.py  main.py  models.py  terminal_ui.py  topics.py  ui_common.py
tutor_agent/core/: __init__.py  orchestrator.py
tutor_agent/memory/: __init__.py  store.py
tutor_agent/prompts/: system_prompt.py
tutor_agent/rag/: chunking.py  embeddings.py  ingest.py  retriever.py
tutor_agent/tools/: code_executor.py  memory_tools.py  quiz_tool.py  rag_tool.py
